add cors config